--- a/hugo.toml
+++ b/hugo.toml
@@ -21,8 +21,10 @@ theme = "PaperMod"
 這裡有我的小說作品，以及我的日常興趣——  
 包括寫作、音樂、動漫、遊戲、運動、魔術與哲學等主題上的心得與思考。
 
-如果當中有任何感興趣的內容，歡迎隨意逛逛。  
-有任何感想都可以填寫[意見表單](https://forms.gle/y8tJ5kNVEyk9V1BN7)，期待收到您的回饋！
+如有任何感興趣的內容請隨意逛逛，  
+也可以透過 [RSS 訂閱](https://lq7.tw/index.xml) 追蹤本站更新。
+
+有任何感想歡迎使用[意見表單](https://forms.gle/y8tJ5kNVEyk9V1BN7)告訴我，期待收到您的回饋！
 """
 
 [menu]
