--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,11 @@
 baseURL = "https://lq7.tw/"
 languageCode = "zh-tw"
-title = "LQ7 | 以創作和思考探索世界"
+defaultContentLanguage = "zh-tw"
+title = "LQ7的創作與想像"
 theme = "PaperMod"
+timeZone = "Asia/Taipei"
+[markup.goldmark.renderer]
+  unsafe = true
 
 [params]
   author = "LQ7"
@@ -18,14 +22,15 @@ theme = "PaperMod"
     Content = """
 大家好，我是LQ7，本職為資訊工程師，同時也是個自由創作者，喜愛各種形式的藝術表演與創作。
 
-這裡有我的小說作品，以及我的日常興趣，  
-包括寫作、音樂、動漫、遊戲、運動、魔術與哲學等主題上的心得與思考。
+這裡有我的小說作品，以及我的日常興趣：包括寫作、音樂、動漫、遊戲、運動、魔術與哲學等主題上的心得與思考。
 
-如有任何感興趣的內容請隨意逛逛，  
-也可以透過 [RSS 訂閱](https://lq7.tw/index.xml) 追蹤本站更新。
+如有任何感興趣的內容請隨意逛逛，也可以透過 [RSS 訂閱](https://lq7.tw/index.xml) 追蹤本站更新。
 
 有任何感想歡迎使用[意見表單](https://forms.gle/y8tJ5kNVEyk9V1BN7)告訴我，期待收到您的回饋！
 """
+[params.footer]
+  hidePoweredBy = true
+  text = "LQ7 版權所有"
 
 [menu]
   [[menu.main]]
