--- a/hugo.toml
+++ b/hugo.toml
@@ -6,6 +6,8 @@ theme = "PaperMod"
 timeZone = "Asia/Taipei"
 [markup.goldmark.renderer]
   unsafe = true
+[pagination]
+  pagerSize = 10
 
 [params]
   author = "LQ7"
@@ -16,6 +18,7 @@ timeZone = "Asia/Taipei"
   ShowBreadCrumbs = false
   ShowCodeCopyButtons = true
   disableSpecial1stPost = true
+  mainSections = ["fanfic", "writing", "reading", "thinking", "mood"]
 
   [params.homeInfoParams]
     Title = "LQ7 在此向您打招呼！"
