--- a/hugo.toml
+++ b/hugo.toml
@@ -37,7 +37,7 @@ hasCJKLanguage = true
     Content = """
 　　大家好，我是LQ7，本職為資訊工程師，同時也是個自由創作者，喜愛各種形式的藝術表演與創作。這裡有我閒暇之餘的興趣，包括小說、寫作、音樂、動漫、哲學、魔術、遊戲與運動等主題上的心得與思考。如有任何感興趣的內容，歡迎隨意逛逛。喜歡的話，也可以透過 [RSS 訂閱](https://lq7.tw/index.xml) 追蹤本站更新。
 
-　　有任何感想歡迎使用[意見表單](https://forms.gle/y8tJ5kNVEyk9V1BN7)或[寫信給我](mailto:lpseven@gmail.com)，或在[留言板](/guestbook/)簽個名，期待收到您的回饋 (　ﾟ∀ﾟ) ﾉ
+　　有任何感想歡迎使用[意見表單](https://forms.gle/y8tJ5kNVEyk9V1BN7)或[寫信給我](mailto:lpseven@gmail.com)，或在[留言板](/guestbook/)簽個名，期待收到您的回饋 ( ・∀・)ﾉ
 """
 [params.footer]
   hidePoweredBy = true
